--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: rgb(253,250,247);
+$background-color: hsl(30, 60%, 98%);
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
